kubernetes/aks/apps/webtop/users/tcardin/tcardin-webtop-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tcardin-webtop
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tcardin-webtop
  template:
    metadata:
      labels:
        app: tcardin-webtop
    spec:
      containers:
      - name: webtop
        image: ghcr.io/ai-cfia/webtop-ubuntu-kde:main
        ports:
        - containerPort: 3000
        volumeMounts:
        - name: config
          mountPath: /config
      volumes:
      - name: config
        persistentVolumeClaim:
          claimName: tcardin-webtop-config-pvc

---
apiVersion: v1
kind: Service
metadata:
  name: tcardin-webtop-service
spec:
  type: ClusterIP
  selector:
    app: webtop
  ports:
  - protocol: TCP
    port: 3000
    targetPort: 3000
