kubernetes/aks/apps/webtop/users/tcardin/tcardin-webtop-ingress.yaml
# For more information check https://github.com/nginxinc/kubernetes-ingress/issues/323
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tcardin-webtop-ingress
  annotations:
    nginx.ingress.kubernetes.io/whitelist-source-range: 205.194.32.0/24,10.244.0.0/16,192.197.71.0/24
    external-dns.alpha.kubernetes.io/target: inspection.alpha.canada.ca
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/add-base-url: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/client_max_body_size: "200m"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "120"
    ingress.kubernetes.io/force-ssl-redirect: "true"
    kubernetes.io/tls-acme: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - tcardin-webtop.inspection.alpha.canada.ca
      secretName: webtop-tls
  rules:
    - host: tcardin-webtop.inspection.alpha.canada.ca
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: tcardin-webtop-service
                port:
                  number: 3000
